<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="240dp"
            android:layout_gravity="left"
            android:foregroundGravity="left"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_height="50dp"/>

        <TextView
            android:theme="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/home_first_section"/>

        <LinearLayout
            android:background="@drawable/card"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/cardMargin"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:elevation="@dimen/elevation"
            android:backgroundTint="@color/dark_green"
            android:orientation="vertical">

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_title"
                android:textColor="@color/white"/>

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_description"
                android:textColor="@color/white"/>

            <TextView
                style="@style/text"
                android:textSize="@dimen/text_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="19/06/2022 às 10:30"
                android:textAlignment="textEnd"
                android:textColor="@color/white_translucent"/>

        </LinearLayout>

        <TextView
            android:theme="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/home_second_section"/>

        <TextView
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/description_second_section"
            android:textColor="@color/black_translucent"
            android:layout_marginBottom="@dimen/margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="2"
                android:rowOrderPreserved="false"
                android:useDefaultMargins="true">

                <LinearLayout
                    android:id="@+id/home_squad1"
                    android:background="@drawable/card"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_columnWeight="1"
                    android:backgroundTint="@color/light_brown"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:maxWidth="120dp"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/squad1_description"/>

                    <TextView
                        style="@style/percent_value"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="8%"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_squad2"
                    android:background="@drawable/card"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:backgroundTint="@color/oliva"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/squad2_description"/>

                    <TextView
                        style="@style/percent_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="17%"/>

                </LinearLayout>
            </GridLayout>




        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>